# test-payments-processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml  dockerfile.dev  starship.toml
migrations/: env.py
migrations/versions/: 3737644ac31c_initial_revision.py  45105ab24e1b_add_external_id.py  51ea15c41551_initial_revision.py  dc70d91c4456_initial_revision.py  dee77747f6d6_add_processed_payments_table.py
src/: main.py
src/core/broker/: rabbitmq.py
src/core/config/: lifespan.py  logger.py  settings.py
src/core/db/: base.py  models.py
src/core/utils/: backoff.py
src/payments_api/: main.py
src/payments_api/api/: router.py
src/payments_api/common/exc/: exceptions.py  handlers.py
src/payments_api/payments/v1/: api.py  dto.py  interfaces.py  repository.py  schemas.py  service.py
src/payments_consumer/: main.py
src/payments_consumer/repositories/: payments.py
src/payments_consumer/services/: payments.py  webhook_sender.py
src/payments_publisher/: main.py
src/payments_publisher/repositories/: dto.py  payments.py
src/payments_publisher/services/: payments.py
